--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,17 +6,17 @@
     @font-face {
         font-family: 'Antonio-Bold';
         font-weight: 900;
-        src: url(../../public/css/fonts/Antonio/static/Antonio-Bold.ttf) format('truetype');
+        src: url('../../public/css/Antonio/static/Antonio-Bold.ttf') format('truetype');
     }
 
     @font-face {
-        font-family: 'Antontio-Semibold';
+        font-family: 'Antonio-Semibold';
         font-weight: bold;
-        src: url(../../public/css/fonts/Antonio/static/Antonio-SemiBold.ttf) format('truetype');
+        src: url('../../public/css/Antonio/static/Antonio-SemiBold.ttf') format('truetype');
     }
 
     @font-face {
         font-family: 'Antonio-Regular';
-        src: url(../../public/css/fonts/Antonio/static/Antonio-Regular.ttf)  format('truetype');
+        src: url('../../public/css/Antonio/static/Antonio-Regular.ttf') format('truetype');
     }
 }
